Verse: Fix line-wrap rendering on front-end of site

--- a/packages/block-library/src/verse/style.scss
+++ b/packages/block-library/src/verse/style.scss
@@ -1,5 +1,4 @@
 pre.wp-block-verse {
 	font-family: inherit;
 	overflow: auto;
-	white-space: nowrap;
 }
